--- a/reset.html
+++ b/reset.html
@@ -17,6 +17,8 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <title>MMOANONS</title>
     <!-- styles -->
+    <script src="js/luxon.js"></script>
+    <link rel="stylesheet" href="css/swiper-styles.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -126,11 +128,7 @@
         </div>
       </div>
     </section>
-    <!-- jquery -->
-    <!-- scripts -->
     <script src="js/jquery.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery-countdown.js"></script>
     <script src="js/selectize.min.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/script.js"></script>
