--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <title>MMOANONS</title>
     <!-- styles -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
+    <script src="js/luxon.js"></script>
+    <link rel="stylesheet" href="css/swiper-styles.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -383,23 +381,12 @@
             </div>
             <div class="server-big__right">
               <div class="server-big-right__countdown">
-                <div class="server-big__right--text">До открытия осталось</div>
-                <div id="countdown">
-                  <div class="coundown__item">
-                    <div class="days"></div>
-                    <div class="days-label"></div>
-                  </div>
-                  :
-                  <div class="coundown__item">
-                    <div class="hours"></div>
-                    <div class="hours-label"></div>
-                  </div>
-                  :
-                  <div class="coundown__item">
-                    <div class="minutes"></div>
-                    <div class="minutes-label"></div>
-                  </div>
-                </div>
+                <div
+                  data-timer-start-time="2024-07-31 23:59:59"
+                  data-timer-before="До открытия осталось"
+                  data-timer-after="С момента начала прошло"
+                  data-timer-time-zone="Europe/Moscow"
+                ></div>
               </div>
             </div>
           </div>
@@ -418,8 +405,13 @@
                 <div class="servers-top__icon"></div>
               </div>
               <div class="servers-top__version d-flex">
-                <div class="servers-top-version__text">Версия игры любая</div>
-                <div class="servers-top-version__angle"></div>
+                <div class="servers-top__version d-flex">
+                  <select id="custom-select" class="custom-select">
+                    <option value="0">Версия игры любая</option>
+                    <option value="1">Версия игры v1.1</option>
+                    <option value="2">Версия игры v1.2</option>
+                  </select>
+                </div>
               </div>
               <div class="servers-top__filter d-flex">
                 <div class="servers-top-filter__icon"></div>
@@ -3181,11 +3173,7 @@
         </div>
       </div>
     </footer>
-    <!-- jquery -->
-    <!-- scripts -->
     <script src="js/jquery.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery-countdown.js"></script>
     <script src="js/selectize.min.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/script.js"></script>
