--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
     <meta property="og:image:height" content="630" />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <title>MMOANONS</title>
+    <script>
+      const __config = {
+        timer: {
+          dd: [
+            ["день", "дня", "дней"],
+            ["час", "часа", "часов"],
+            ["минута", "минуты", "минут"],
+            ["секунда", "секунды", "секунд"],
+          ],
+        },
+      };
+    </script>
     <!-- styles -->
-    <script src="js/luxon.js"></script>
     <link rel="stylesheet" href="css/swiper-styles.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -3176,6 +3187,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/selectize.min.js"></script>
     <script src="js/swiper.js"></script>
+    <script src="js/luxon.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
